FIX: fix bug report

--- a/snakevir/script/clustering_Report.Rmd
+++ b/snakevir/script/clustering_Report.Rmd
@@ -128,7 +128,8 @@ options(repos = "https://pbil.univ-lyon1.fr/CRAN/")
 # Load Library
 if(!require("dplyr"))
   {
-  install.packages('dplyr')
+  path<- "http://cran.r-project.org/src/contrib/Archive/dplyr/dplyr_1.0.10.tar.gz"
+  install.packages(path, repos=NULL, type="source")
 }
 if(!require("purrr"))
   {
